# fakescan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
fakescan/: __init__.py  __main__.py  cli.py  core.py
